cms_blogger/static/cms_blogger/css/blogger.css
/* line 19, ../sass/imports/blogger/_globals.scss */
.no-padding {
  padding: 0 !important;
}

/* line 5, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header {
  position: relative;
  padding: 0;
  min-height: 150px;
}
@media (max-width: 481px) {
  /* line 5, ../sass/imports/blogger/_blog-header.scss */
  .cms-blogger .blog-header {
    min-height: inherit;
  }
}
/* line 13, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header #blog-title,
.cms-blogger .blog-header #blog-tagline {
  position: relative;
  text-align: left;
}
/* line 17, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header #blog-title {
  font-size: 40px;
  line-height: 44px;
  text-transform: capitalize;
  padding: 15px;
  padding-bottom: 0;
}
@media (max-width: 481px) {
  /* line 17, ../sass/imports/blogger/_blog-header.scss */
  .cms-blogger .blog-header #blog-title {
    font-size: 30px;
  }
}
/* line 28, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header #blog-tagline {
  font-size: 16px;
  padding: 15px;
  padding-top: 5px;
  color: #747474;
}
/* line 33, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header #blog-tagline * {
  color: #747474;
}
@media (max-width: 481px) {
  /* line 28, ../sass/imports/blogger/_blog-header.scss */
  .cms-blogger .blog-header #blog-tagline {
    display: none;
  }
}
/* line 40, ../sass/imports/blogger/_blog-header.scss */
.cms-blogger .blog-header #blog-banding-image {
  position: absolute;
  left: 0;
  bottom: 0;
  max-height: 100%;
}
@media (max-width: 481px) {
  /* line 40, ../sass/imports/blogger/_blog-header.scss */
  .cms-blogger .blog-header #blog-banding-image {
    display: none;
  }
}

/* line 19, ../sass/imports/blogger/_globals.scss */
.no-padding {
  padding: 0 !important;
}

/* line 4, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger {
  font-size: 10px;
}
/* line 6, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .clearfix:after {
  content: "";
  display: table;
  clear: both;
}
/* line 11, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .box {
  padding: 15px;
  width: auto;
}
/* line 16, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .last .blog-entry > .right-col {
  border: 0;
  padding-bottom: 0;
}
/* line 25, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .right-rail .blog-entry > .right-col > .left-col {
  display: block;
  padding-right: 0;
}
/* line 29, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .right-rail .blog-entry > .right-col > .right-col {
  float: none;
  width: auto;
  padding-left: 0;
}
/* line 33, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .right-rail .blog-entry > .right-col > .right-col .entry-image-container {
  margin-bottom: 10px;
}
/* line 40, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry {
  vertical-align: top;
  font-size: 13px;
  margin-bottom: 25px;
  color: #747474;
  background: #fff;
}
/* line 48, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .left-col {
  float: left;
  width: 50px;
  padding-right: 15px;
  padding-bottom: 30px;
  text-align: center;
  vertical-align: top;
}
/* line 81, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .left-col .date {
  vertical-align: middle;
  text-align: center;
  width: 55px;
  height: 50px;
  padding-top: 5px;
  background: #efefef;
  color: #474747;
}
/* line 89, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .left-col .date .month {
  font-size: 16px;
  text-transform: uppercase;
  line-height: 21px;
}
/* line 94, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .left-col .date .day {
  font-size: 22px;
  line-height: 21px;
}
/* line 100, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col {
  text-align: left;
  padding-bottom: 15px;
  margin-left: 70px !important;
  margin-bottom: 0;
  border-bottom: 1px dashed #dddddd;
}
/* line 112, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col .entry-image-container {
  margin-top: 20px;
}
/* line 118, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col .entry-image-container {
  margin-top: 0;
}
/* line 124, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col h1 {
  line-height: 38px;
  font-size: 30px;
  text-align: left;
  text-transform: capitalize;
  padding: 0;
  margin: 0;
}
/* line 132, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col h1 a:hover {
  text-decoration: none;
}
/* line 137, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col > .left-col {
  float: left;
  text-align: left;
  white-space: normal;
  vertical-align: top;
}
@media (max-width: 599px) {
  /* line 137, ../sass/imports/blogger/_blog-entry.scss */
  .cms-blogger .blog-entry > .right-col > .left-col {
    display: block;
    padding-right: 0;
    width: auto;
  }
}
/* line 148, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col > .right-col {
  text-align: left;
  float: right;
  width: 48%;
  padding-left: 2%;
  white-space: normal;
  vertical-align: top;
}
/* line 153, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col > .right-col + .left-col {
  width: 48%;
  padding-right: 2%;
}
@media (max-width: 599px) {
  /* line 148, ../sass/imports/blogger/_blog-entry.scss */
  .cms-blogger .blog-entry > .right-col > .right-col {
    float: none;
    width: auto;
    padding-left: 0;
  }
  /* line 161, ../sass/imports/blogger/_blog-entry.scss */
  .cms-blogger .blog-entry > .right-col > .right-col .entry-image-container {
    margin-bottom: 10px;
  }
}
/* line 167, ../sass/imports/blogger/_blog-entry.scss */
.cms-blogger .blog-entry > .right-col > .right-col img {
  max-width: 100%;
  max-height: 100%;
}
/* ... */

